# full-stack-template

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64c071e0061c_product_table.py
backend/app/: api.py  app.py  config.py  json_encoder.py
backend/app/model/: product.py
backend/app/resources/: product.py
backend/app/utils/: environment.py
backend/scripts/: format.sh  run.sh  test.sh
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.js  configureStore.js  index.js
frontend/src/api/: internal.js
frontend/src/reducers/: index.js
